# modern_cpp_challenges

./: CMakeLists.txt  README.md
src/ch01_math/: problem_001.cpp  problem_002.cpp  problem_003.cpp  problem_004.cpp  problem_005.cpp  problem_006.cpp  problem_007.cpp  problem_008.cpp  problem_009.cpp  problem_010.cpp  problem_011.cpp  problem_012.cpp  problem_013.cpp  problem_014.cpp
src/ch02_language_features/: problem_015.cpp  problem_016.cpp  problem_017.cpp  problem_018.cpp  problem_019.cpp  problem_020.cpp  problem_021.cpp  problem_022.cpp
src/ch03_strings_and_regular_expressions/: problem_023.cpp  problem_024.cpp  problem_025.cpp  problem_026.cpp  problem_027.cpp  problem_028.cpp  problem_029.cpp  problem_030.cpp  problem_031.cpp
src/ch04_streams_and_filesystems/: problem_032.cpp  problem_033.cpp  problem_034.cpp  problem_035.cpp  problem_036.cpp  problem_037.cpp  problem_038.cpp
src/ch05_date_and_time/: problem_039.cpp  problem_040.cpp  problem_041.cpp  problem_042.cpp  problem_043.cpp
src/ch06_algorithms_and_data_structures/: problem_045.cpp  problem_046.cpp  problem_047.cpp  problem_048.cpp  problem_049.cpp  problem_050.cpp  problem_051.cpp  problem_052.cpp
src/utils/: common.h
