cmake_minimum_required(VERSION 3.22)
project(modern_cpp_challenges)

set(CMAKE_CXX_STANDARD 20)

include_directories(src/utils/)

add_executable(modern_cpp_challenges main.cpp)
add_executable(problem_001 src/ch01_math/problem_001.cpp)
add_executable(problem_002 src/ch01_math/problem_002.cpp)
add_executable(problem_003 src/ch01_math/problem_003.cpp)
add_executable(problem_004 src/ch01_math/problem_004.cpp)
add_executable(problem_005 src/ch01_math/problem_005.cpp)
add_executable(problem_006 src/ch01_math/problem_006.cpp)
add_executable(problem_007 src/ch01_math/problem_007.cpp)
add_executable(problem_008 src/ch01_math/problem_008.cpp)
add_executable(problem_009 src/ch01_math/problem_009.cpp)
add_executable(problem_010 src/ch01_math/problem_010.cpp)
add_executable(problem_011 src/ch01_math/problem_011.cpp)
add_executable(problem_012 src/ch01_math/problem_012.cpp)
add_executable(problem_013 src/ch01_math/problem_013.cpp)
add_executable(problem_014 src/ch01_math/problem_014.cpp)
add_executable(problem_015 src/ch02_language_features/problem_015.cpp)
add_executable(problem_016 src/ch02_language_features/problem_016.cpp)
add_executable(problem_017 src/ch02_language_features/problem_017.cpp)
add_executable(problem_018 src/ch02_language_features/problem_018.cpp)
add_executable(problem_019 src/ch02_language_features/problem_019.cpp)
add_executable(problem_020 src/ch02_language_features/problem_020.cpp)
add_executable(problem_021 src/ch02_language_features/problem_021.cpp)
add_executable(problem_022 src/ch02_language_features/problem_022.cpp)
add_executable(problem_023 src/ch03_strings_and_regular_expressions/problem_023.cpp)
add_executable(problem_024 src/ch03_strings_and_regular_expressions/problem_024.cpp)
add_executable(problem_025 src/ch03_strings_and_regular_expressions/problem_025.cpp)
add_executable(problem_026 src/ch03_strings_and_regular_expressions/problem_026.cpp)
add_executable(problem_027 src/ch03_strings_and_regular_expressions/problem_027.cpp)
add_executable(problem_028 src/ch03_strings_and_regular_expressions/problem_028.cpp)
add_executable(problem_029 src/ch03_strings_and_regular_expressions/problem_029.cpp)
add_executable(problem_030 src/ch03_strings_and_regular_expressions/problem_030.cpp)
add_executable(problem_031 src/ch03_strings_and_regular_expressions/problem_031.cpp)
add_executable(problem_032 src/ch04_streams_and_filesystems/problem_032.cpp)
add_executable(problem_033 src/ch04_streams_and_filesystems/problem_033.cpp)
add_executable(problem_034 src/ch04_streams_and_filesystems/problem_034.cpp)
add_executable(problem_035 src/ch04_streams_and_filesystems/problem_035.cpp)
add_executable(problem_036 src/ch04_streams_and_filesystems/problem_036.cpp)
add_executable(problem_037 src/ch04_streams_and_filesystems/problem_037.cpp)
#add_executable(problem_038 src/ch04_streams_and_filesystems/problem_038.cpp)
add_executable(problem_039 src/ch05_date_and_time/problem_039.cpp)
add_executable(problem_040 src/ch05_date_and_time/problem_040.cpp)
add_executable(problem_041 src/ch05_date_and_time/problem_041.cpp)
add_executable(problem_042 src/ch05_date_and_time/problem_042.cpp)
add_executable(problem_043 src/ch05_date_and_time/problem_043.cpp)
add_executable(problem_045 src/ch06_algorithms_and_data_structures/problem_045.cpp)
add_executable(problem_046 src/ch06_algorithms_and_data_structures/problem_046.cpp)
add_executable(problem_047 src/ch06_algorithms_and_data_structures/problem_047.cpp)
add_executable(problem_048 src/ch06_algorithms_and_data_structures/problem_048.cpp)
add_executable(problem_049 src/ch06_algorithms_and_data_structures/problem_049.cpp)